# circle

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/emscripten-adapters/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
examples/demo/: CMakeLists.txt  main.cpp
examples/demo-declarative/: CMakeLists.txt  main.cpp
include/circle/: anchors.hpp  application.hpp  color.hpp  column.hpp  declarative.hpp  event.hpp  font.hpp  fwd.hpp  gradient.hpp  image.hpp  item.hpp  mouse_area.hpp  object.hpp  rectangle.hpp  row.hpp  text.hpp  timer.hpp  window.hpp
include/circle/animation/: animation.hpp
include/circle/private/: draw_engine.hpp
include/circle/utils/: font_database.hpp  sdl_utils.hpp
src/: CMakeLists.txt  anchors.cpp  application.cpp  color.cpp  column.cpp  event.cpp  font.cpp  gradient.cpp  image.cpp  item.cpp  mouse_area.cpp  object.cpp  rectangle.cpp  row.cpp  text.cpp  timer.cpp  window.cpp
src/private/: circle_sdl.cpp  circle_sdl.hpp  draw_engine.cpp
src/private/standard_fonts/: Roboto-Bold.ttf.cpp  Roboto-BoldItalic.ttf.cpp  standard_fonts.hpp
src/utils/: font_database.cpp
test/: CMakeLists.txt  anchors_test.cpp
